# milo

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE.md  index.html  latest.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.cursor/rules/: tuari.mdc
scripts/: README.md  release.sh  update-latest.cjs  update-latest.js
src/: App.css  App.tsx  FloatingButton.css  config.ts  main.css  main.tsx  styles.css
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: deafult.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  config.rs  core.rs  history.rs  lib.rs  main.rs  menu.rs  notifications.rs  settings.rs  shortcuts.rs  state.rs  system.rs  transform.rs  tray.rs
src-tauri/src/core/setup/: mod.rs
src/components/: AddToneForm.tsx  ApiSettings.tsx  Dashboard.tsx  DiffViewer.tsx  History.tsx  InfoPage.tsx  PromptSettings.tsx  ShortcutEditModal.tsx  ShortcutItem.tsx  Sidebar.tsx  ThemeSelector.tsx
src/components/ui/: button.tsx  kbd.tsx  switch.tsx
src/context/: ThemeContext.tsx
src/hooks/: useShortcutEditor.ts
src/styles/: InfoPage.css  SharedStyles.css  Sidebar.css
src/utils/: keyboardUtils.ts  updater.ts
