[package]
name = "milo"
version = "0.1.16"
description = "Milo - AI Text Transformation Tool"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "milo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = [ "macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "2.0"
directories = "5.0"
tokio = { version = "1.32", features = ["full"] }
async-openai = "0.27"
anyhow = "1.0"
window-shadows = "0.2"
arboard = "3.2"
dirs = "4.0"
chrono = { version = "0.4", features = ["serde"] }
jieba-rs = "0.7"
lazy_static = "1.4"

# macOS-specific dependencies for native window manipulation
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

# [features]
# custom-protocol = ["tauri/custom-protocol"]
